--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -241,22 +241,26 @@ endif ()
 # Find OpenMP
 # ----------------------------------------------------------------------------
 if (OPFLOW_WITH_OPENMP)
-    if(APPLE)
-        #include_directories("/usr/local/opt/llvm/include")
+    # workarounds for CI to find the correct libomp
+    if (APPLE)
         link_directories("/usr/local/opt/llvm/lib")
-        if(CMAKE_C_COMPILER_ID MATCHES "Clang")
-            set(OpenMP_C "${CMAKE_C_COMPILER}")
-            set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
-            set(OpenMP_C_LIB_NAMES "omp")
-            set(OpenMP_omp_LIBRARY ${OpenMP_C_LIB_NAMES})
-        endif()
-        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-            set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-            set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
-            set(OpenMP_CXX_LIB_NAMES "omp")
-            set(OpenMP_omp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
-        endif()
-    endif()
+    #else ()
+    #    if (EXISTS /home/linuxbrew/.linuxbrew/opt/llvm/lib)
+    #        link_directories("/home/linuxbrew/.linuxbrew/opt/llvm/lib")
+    #    endif ()
+    endif ()
+    if (CMAKE_C_COMPILER_ID MATCHES "Clang")
+        set(OpenMP_C "${CMAKE_C_COMPILER}")
+        set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+        set(OpenMP_C_LIB_NAMES "omp")
+        set(OpenMP_omp_LIBRARY ${OpenMP_C_LIB_NAMES})
+    endif ()
+    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
+        set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+        set(OpenMP_CXX_LIB_NAMES "omp")
+        set(OpenMP_omp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+    endif ()
     find_package(OpenMP REQUIRED)
     target_link_libraries(opflow INTERFACE OpenMP::OpenMP_C OpenMP::OpenMP_CXX)
     target_compile_options(opflow INTERFACE ${OpenMP_CXX_FLAGS})
