[Core] Add TecplotBinaryStream

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -347,7 +347,7 @@ endif ()
 if (OPFLOW_INSTALL)
     include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/TECIOConfig.cmake)
     CONFIG_AND_INSTALL_TECIO()
-    target_include_directories(opflow INTERFACE ${CMAKE_INSTALL_PREFIX}/include)
+    target_include_directories(opflow INTERFACE ${CMAKE_INSTALL_PREFIX}/include/tecio)
     target_link_directories(opflow INTERFACE ${CMAKE_INSTALL_PREFIX}/lib)
     if (OPFLOW_WITH_MPI)
         target_link_libraries(opflow INTERFACE teciompi)
@@ -357,9 +357,11 @@ if (OPFLOW_INSTALL)
 else ()
     if (OPFLOW_WITH_MPI)
         add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/tecio/teciompisrc EXCLUDE_FROM_ALL)
+        target_include_directories(opflow INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/external/tecio/teciompisrc)
         target_link_libraries(opflow INTERFACE teciompi)
     else ()
         add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/tecio/teciosrc EXCLUDE_FROM_ALL)
+        include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external/tecio/teciosrc)
         target_link_libraries(opflow INTERFACE tecio)
     endif ()
 endif ()
