--- a/test/Utils/CMakeLists.txt
+++ b/test/Utils/CMakeLists.txt
@@ -14,4 +14,6 @@ project(OpFlow_Utils_Tests)
 
 add_gmock(HDF5StreamTest ${CMAKE_CURRENT_LIST_DIR}/HDF5StreamTest.cpp)
 
+add_gmock(TecplotStreamTest ${CMAKE_CURRENT_LIST_DIR}/TecplotStreamTest.cpp)
+
 add_gmock(IOGroupTest ${CMAKE_CURRENT_LIST_DIR}/IOGroupTest.cpp)
