[CI] Fix build for M1 Mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,7 @@ if (OPFLOW_INSTALL)
     # Build, install & link to the installed libfmt
     include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/FMTConfig.cmake)
     CONFIG_AND_INSTALL_FMT()
-    find_package(fmt REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+    find_package(fmt REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} NO_DEFAULT_PATH)
 else ()
     # Add the bundled fmt library as a subproject
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/fmt EXCLUDE_FROM_ALL)
@@ -187,7 +187,7 @@ if (OPFLOW_INSTALL)
     # Same as libfmt
     include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/SPDLOGConfig.cmake)
     CONFIG_AND_INSTALL_SPDLOG()
-    find_package(spdlog REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+    find_package(spdlog REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} NO_DEFAULT_PATH)
 else ()
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/spdlog EXCLUDE_FROM_ALL)
 endif ()
@@ -199,7 +199,7 @@ target_link_libraries(opflow INTERFACE spdlog::spdlog)
 if (OPFLOW_INSTALL)
     include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/AMGCLConfig.cmake)
     CONFIG_AND_INSTALL_AMGCL()
-    find_package(amgcl REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+    find_package(amgcl REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} NO_DEFAULT_PATH)
 else ()
     add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/external/amgcl EXCLUDE_FROM_ALL)
 endif ()
@@ -212,12 +212,12 @@ if (OPFLOW_TBB_EXTERNAL)
     if (NOT DEFINED TBB_DIR)
         message(FATAL "Variable TBB_DIR not defined. Use -DTBB_DIR to specify TBB's install path.")
     endif ()
-    find_package(TBB REQUIRED PATHS ${TBB_DIR})
+    find_package(TBB REQUIRED PATHS ${TBB_DIR} NO_DEFAULT_PATH)
 else ()
     if (OPFLOW_INSTALL)
         include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/TBBConfig.cmake)
         CONFIG_AND_INSTALL_TBB()
-        find_package(tbb NAMES tbb TBB REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+        find_package(tbb NAMES tbb TBB REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} NO_DEFAULT_PATH)
     else ()
         set(BUILD_SHARED_LIBS ON)
         set(TBB_TEST OFF)
@@ -276,7 +276,7 @@ if (OPFLOW_HYPRE_EXTERNAL)
         message(FATAL "Variable HYPRE_DIR not set. Use -DHYPRE_DIR to specify HYPRE's install path")
     endif ()
     # Use external HYPRE
-    find_package(HYPRE REQUIRED PATHS ${HYPRE_DIR})
+    find_package(HYPRE REQUIRED PATHS ${HYPRE_DIR} NO_DEFAULT_PATH)
     # Here we hard link to the found HYPRE to avoid find again at client
     target_link_libraries(opflow INTERFACE HYPRE)
 else ()
@@ -284,7 +284,7 @@ else ()
     if (OPFLOW_INSTALL)
         include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/HYPREConfig.cmake)
         CONFIG_AND_INSTALL_HYPRE()
-        find_package(HYPRE REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+        find_package(HYPRE REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} NO_DEFAULT_PATH)
         # HYPRE::HYPRE is only exported on install
         target_link_libraries(opflow INTERFACE HYPRE::HYPRE)
     else ()
@@ -307,7 +307,7 @@ if (OPFLOW_WITH_VTK)
             if (NOT DEFINED VTK_DIR)
                 message(FATAL "Variable VTK_DIR not defined. Use -DVTK_DIR to specify VTK's install path")
             endif ()
-            find_package(VTK REQUIRED PATHS ${VTK_DIR})
+            find_package(VTK REQUIRED PATHS ${VTK_DIR} NO_DEFAULT_PATH)
             target_compile_definitions(opflow INTERFACE OPFLOW_VTK_EXTERNAL)
         endif ()
     else ()
