--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,8 +7,7 @@ set(OPFLOW_EXAMPLE_CXX_FLAGS_DEBUG)
 set(OPFLOW_EXAMPLE_CXX_FLAGS_RELEASE)
 set(OPFLOW_EXAMPLE_CXX_FLAGS_RELWITHDEBINFO)
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS "-mprefer-vector-width=512 -mfma \
-             -Wno-narrowing -ftemplate-backtrace-limit=0")
+    string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS " -Wno-narrowing -ftemplate-backtrace-limit=0")
     string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_DEBUG "${OPFLOW_EXAMPLE_CXX_FLAGS} -g -O0")
     string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_RELEASE "${OPFLOW_EXAMPLE_CXX_FLAGS} -O3 -fopenmp-simd -DNDEBUG")
     string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_RELWITHDEBINFO "${OPFLOW_EXAMPLE_CXX_FLAGS_RELEASE} -g")
