[Core] Make forward computation fully const for input exprs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -245,6 +245,8 @@ if (OPFLOW_WITH_OPENMP)
     if (APPLE)
         if (EXISTS /usr/local/opt/llvm/lib)
             link_directories("/usr/local/opt/llvm/lib")
+        elseif (EXISTS /opt/homebrew/lib)
+            link_directories("/opt/homebrew/lib")
         endif ()
     endif ()
     if (CMAKE_C_COMPILER_ID MATCHES "Clang")
