--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,30 @@
     "cmake.configureSettings": {
         "OPFLOW_BUILD_TESTS" : "ON",
         "OPFLOW_BUILD_EXAMPLES" : "ON",
-        "OPFLOW_WITH_HDF5" : "ON"
+        "OPFLOW_WITH_HDF5" : "ON",
+        "OPFLOW_INSTALL" : "OFF"
     },
-    "cmake.buildDirectory": "${workspaceFolder}/build/${variant:buildType}"
+    "cmake.buildDirectory": "${workspaceFolder}/build/${variant:buildType}",
+    "files.associations": {
+        "__hash_table": "cpp",
+        "__tree": "cpp",
+        "__tuple": "cpp",
+        "any": "cpp",
+        "array": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "compare": "cpp",
+        "cstddef": "cpp",
+        "type_traits": "cpp",
+        "filesystem": "cpp",
+        "forward_list": "cpp",
+        "limits": "cpp",
+        "random": "cpp",
+        "ratio": "cpp",
+        "tuple": "cpp",
+        "variant": "cpp",
+        "functional": "cpp",
+        "memory_resource": "cpp",
+        "utility": "cpp"
+    }
 }
