[Example] Add TGMPI example

--- a/examples/TaylorGreen/CMakeLists.txt
+++ b/examples/TaylorGreen/CMakeLists.txt
@@ -7,3 +7,5 @@ endif ()
 
 add_example(TG TG.cpp)
 target_compile_definitions(TG PRIVATE OPFLOW_THREAD_MODEL_OPENMP)
+
+add_mpi_example(TGMPI TGMPI.cpp)
