[CI] Set spdlog to use external fmt library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,6 +197,7 @@ if (OPFLOW_INSTALL)
     CONFIG_AND_INSTALL_SPDLOG()
     find_package(spdlog REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} NO_DEFAULT_PATH)
 else ()
+    set(SPDLOG_FMT_EXTERNAL ON)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/spdlog EXCLUDE_FROM_ALL)
 endif ()
 target_link_libraries(opflow INTERFACE spdlog::spdlog)
