--- a/cmake/opflowConfig.cmake.in
+++ b/cmake/opflowConfig.cmake.in
@@ -55,6 +55,19 @@ if (${OPFLOW_WITH_MPI})
     find_dependency(MPI)
 endif ()
 
+# Find HDF5
+set(OPFLOW_WITH_HDF5 @OPFLOW_WITH_HDF5@)
+if (${OPFLOW_WITH_HDF5})
+    if (OPFLOW_WITH_MPI)
+        set(HDF5_PREFER_PARALLEL TRUE)
+    endif ()
+    set(HDF5_USE_STATIC_LIBRARIES ON)
+    find_dependency(HDF5 COMPONENTS C REQUIRED QUIET)
+    if (HDF5_PREFER_PARALLEL AND NOT HDF5_IS_PARALLEL)
+        message(FATAL_ERROR "Cannot find parallel HDF5 library")
+    endif ()
+endif ()
+
 # Find AMGCL
 find_dependency(amgcl PATHS @CMAKE_INSTALL_PREFIX@ NO_DEFAULT_PATH)
 
