[CI] Fix installed version build with teciompi

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -362,6 +362,7 @@ if (OPFLOW_INSTALL)
     target_link_directories(opflow INTERFACE ${CMAKE_INSTALL_PREFIX}/lib)
     if (OPFLOW_WITH_MPI)
         target_link_libraries(opflow INTERFACE teciompi)
+        target_compile_definitions(opflow INTERFACE TECIOMPI)
     else ()
         target_link_libraries(opflow INTERFACE tecio)
     endif ()
