--- a/test/Core/CMakeLists.txt
+++ b/test/Core/CMakeLists.txt
@@ -49,4 +49,5 @@ add_gmock(EqnHolderTest ${CMAKE_CURRENT_LIST_DIR}/Equation/EqnHolderTest.cpp)
 add_gmock(CSRMatrixGeneratorTest ${CMAKE_CURRENT_LIST_DIR}/Equation/CSRMatrixGeneratorTest.cpp)
 add_gmock_mpi(CSRMatrixGeneratorMPITest 4 ${CMAKE_CURRENT_LIST_DIR}/Equation/CSRMatrixGeneratorMPITest.cpp)
 add_gmock(EqnSetTest ${CMAKE_CURRENT_LIST_DIR}/Equation/EqnSetTest.cpp)
+add_gmock_mpi(EqnSetMPITest 4 ${CMAKE_CURRENT_LIST_DIR}/Equation/EqnSetMPITest.cpp)
 add_gmock_mpi(AMGCLMPITest 4 ${CMAKE_CURRENT_LIST_DIR}/Equation/AMGCLMPITest.cpp)
