[CI] Use kernel version to detect macOS 14

--- a/external/tbb/CMakeLists.txt
+++ b/external/tbb/CMakeLists.txt
@@ -38,7 +38,8 @@ if (APPLE)
     endif()
 endif()
 # temporary fix for macOS 14 & CLT 15
-if (APPLE)
+if (CMAKE_HOST_SYSTEM_NAME STREQUAL "Darwin"
+        AND CMAKE_HOST_SYSTEM_VERSION VERSION_GREATER_EQUAL 23)
     add_link_options(-Wl,-ld_classic)
 endif ()
 # Until CMake 3.4.0 FindThreads.cmake requires C language enabled.
