--- a/external/tecio/teciompisrc/CMakeLists.txt
+++ b/external/tecio/teciompisrc/CMakeLists.txt
@@ -38,7 +38,8 @@ FILE(GLOB mainFiles "*.cxx" "*.h")
 LIST(REMOVE_ITEM mainFiles "${CMAKE_CURRENT_SOURCE_DIR}/szcombine.cxx")
 
 # temporary fix for macOS 14 & CLT 15
-if (APPLE)
+if (CMAKE_HOST_SYSTEM_NAME STREQUAL "Darwin"
+        AND CMAKE_HOST_SYSTEM_VERSION VERSION_GREATER_EQUAL 23)
     add_link_options(-Wl,-ld_classic)
 endif ()
 add_library(teciompi STATIC ${mainFiles})
